--- a/tp-cnam-web/layout-responsive.html
+++ b/tp-cnam-web/layout-responsive.html
@@ -5,6 +5,9 @@
         <title>Un layout avec les propriétés float et clear en pourcentages</title>
         <meta charset="UTF-8">
 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <style type="text/css">
 
             /* Reset CSS */
